What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

August 31, 2007
* [GB] Fixed save capabilities in OPJViewer due to recent code upgrade

August 30, 2007
* [FOD] Changed the OpenJPEG library interface to enable users to access information regarding the codestream (also called codestream index).
		This index is usefull for all applications requiring to have a scalable acces to the codestream (like JPIP applications, ...)
        Currently, this information is only available when encoding an image.       
+ [FOD] Added the information regarding the end of packet position in the index        

August 28, 2007
* [FOD] Fixed wrong destructors called in openjpeg.c
* [FOD] Fixed bug in j2k_decode_jpt_stream

August 24, 2007
* [Parvatha] The end of main header is calculated after TLM and POC marker for Dcinema.

August 21, 2007
+ [FOD] Added support for Visual Studio 2005
* [FOD] Robustified MJ2 codecs
* [Parvatha] Solved problems with codec reading from image file directory when filename had more than one "." in name
* [Callum Lerwick] Minor cleanup patch, that gets rid of a bunch of "old style declaration" warnings from Intel's compiler
* [Callum Lerwick] Aligned malloc using Intel's _mm_malloc(). Cleanup on the t1 memory allocation, getting rid of some leftover debug code
* [Callum Lerwick] Memory leaks fixed
* [Callum Lerwick] Reworks of t1_updateflags to get rid of the shift operation
* [Callum Lerwick] mqc_setcurctx moved to the header to allow it to be inlined into the t1.
* [Callum Lerwick] Consolidated some calls to mqc_setcurctx.
* [Callum Lerwick] Cleaned up t1_generate_luts to output the proper types.
* [Callum Lerwick] Replaced the large ctxno_mag lookup table with a small bit of inline-able branchless code
* [Callum Lerwick] Moved the orient flipping into the ctxno_zc table.

August 20, 2007
+ [FOD] Added support for the TGA file format in the codec

August 08, 2007